Updated Git Test

--- a/GIT Test/git_test.html
+++ b/GIT Test/git_test.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>GIT TEST</title>
+		<style type="text/css">
+			body{
+				background-color: #ff00cc;
+			}
+			h1, h2{
+				color: white;
+				text-shadow: 2px 2px rgba(0, 0, 0, .5);
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Git Test</h1>
+		<h2>Ha!</h2>
 	</body>
 </html>
