--- a/JS/eBird_HelloWorld.html
+++ b/JS/eBird_HelloWorld.html
@@ -6,9 +6,12 @@
 	<body>
 		<h1 style{ text align="center"; }>Look at console to see message</h1>
 		<!-- JS is usually the last element in your body tag -->
-		<!-- <script type="text/javascript">
+	<!-- 	<script type="text/javascript">
 			console.log("Hello World!");
+			// Concatenation!
+			//console.log("My favorite color is " + prompt("Please type your favorite color!"));
 		</script> -->
+
 		<script src="eBirdHWScript.js" type="text/javascript"></script>
 	</body>
 </html>
