Added comments to my code

--- a/JS/JSClass11_Assign1/class11_assign1.html
+++ b/JS/JSClass11_Assign1/class11_assign1.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title></title>
+		<!-- Styling the h1 tag -->
 		<style type="text/css">
 			h1{
 				color: gray;
@@ -10,7 +11,9 @@
 		</style>
 	</head>
 	<body>
+		<!-- Adding an id to the h1 tag to be targeted by js -->
 		<h1 id=name></h1>
+		<!-- Adding an external js file -->
 		<script type="text/javascript" src="class11_a1.js"></script>
 	</body>
 </html>
