updated assignment to proper peramaters.

--- a/JS/JSClass13_Assign2/ebirdClass13Assign2.html
+++ b/JS/JSClass13_Assign2/ebirdClass13Assign2.html
@@ -12,6 +12,7 @@
 		</style>
 	</head>
 	<body>
+		<h1 id="original"></h1>
 		<h1 id="fruitList"></h1>
 		<script type="text/javascript" src="ebirdClass13Assign2.js"></script>
 	</body>
