--- a/JS/JSClass14_Assign1/ebirdClass14_Assign1.html
+++ b/JS/JSClass14_Assign1/ebirdClass14_Assign1.html
@@ -13,7 +13,9 @@
 	</style>
 </head>
 <body>
+	<!-- Show user their choices -->
 	<h1 id='list'></h1>
+	<!-- Show user the highest number of their choices -->
 	<h1 id='compare'></h1>
 	<script type="text/javascript" src="ebird_Class14A1.js"></script>
 </body>
