Added comments to Class 14, Assignment 3's HTML

--- a/JS/JSClass14_Assign3/ebirdClass14A3.html
+++ b/JS/JSClass14_Assign3/ebirdClass14A3.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title></title>
+		<!-- Added cool font -->
 		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 		<style type="text/css">
 			h1{
@@ -14,7 +15,9 @@
 		</style>
 	</head>
 	<body>
+		<!-- The welcome message will be displayed in the h1  with the id of 'welcome' -->
 		<h1 id='welcome'></h1>
+		<!-- added external js file -->
 		<script type="text/javascript" src="ebirdClass14A3.js"></script>
 	</body>
 </html>
